RESOLVED FIXED 296710
Extend Fetch to accept local connections
https://bugs.webkit.org/show_bug.cgi?id=296710
Summary Extend Fetch to accept local connections
Ian Gower
Reported 2025-07-30 11:18:50 PDT
Extend Fetch to accept local connections
Attachments
Ian Gower
Comment 1 2025-07-30 11:19:53 PDT
Ian Gower
Comment 2 2025-07-30 14:08:17 PDT
EWS
Comment 3 2025-08-19 15:10:55 PDT
Committed 298921@main (d4e2bd45ea23): <https://commits.webkit.org/298921@main> Reviewed commits have been landed. Closing PR #48741 and removing active labels.
WebKit Commit Bot
Comment 4 2025-08-19 16:41:21 PDT
Re-opened since this is blocked by bug 297626
EWS
Comment 5 2025-08-19 16:54:44 PDT
Committed 298927@main (5b46346c7d14): <https://commits.webkit.org/298927@main> Reviewed commits have been landed. Closing PR #49624 and removing active labels.
Robert Jenner
Comment 6 2025-08-19 17:00:40 PDT
https://commits.webkit.org/298921@main broke all of the builds with the following error: Undefined symbols for architecture x86_64: "WebCore::ScriptWrappable::~ScriptWrappable()", referenced from: WebCore::Geolocation::~Geolocation() in ld: symbol(s) not found for architecture x86_64 clang++: error: linker command failed with exit code 1 (use -v to see invocation) Example build failure: https://build.webkit.org/#/builders/1223/builds/10893 As such, we had to revert the change, and that was reverted in: https://commits.webkit.org/298927@main
Robert Jenner
Comment 7 2025-08-19 17:05:45 PDT
Another thing to note: On the initial PR: https://github.com/WebKit/WebKit/pull/48741 It did fail style checker, and it also failed merge-queue with the error that we are seeing. However, it was then landed with unsafe-merge-queue. Not a huge deal, but it is something to double check and be aware of.
Ian Gower
Comment 8 2025-08-19 21:14:33 PDT
EWS
Comment 9 2025-08-20 15:47:12 PDT
Committed 298981@main (a3bc93f96c80): <https://commits.webkit.org/298981@main> Reviewed commits have been landed. Closing PR #49639 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.